<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/gradStop"
    tools:context="com.halo.loginui2.Signup">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">



        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_login"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <EditText
                        android:hint="@string/Fullname"
                        android:textColorHint="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/et_fullname"
                        android:layout_marginTop="5dp"

                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />





                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/et_phonenumber"
                        android:hint="@string/Phonenumber"
                        android:textColorHint="@color/white"
                        android:layout_height="40dp"
                        android:layout_marginTop="45dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:inputType="phone"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />






                    <EditText
                        android:layout_width="match_parent"
                        android:hint="@string/email_address"
                        android:textColorHint="@color/white"
                        android:id="@+id/et_email"
                        android:layout_height="40dp"
                        android:layout_marginTop="45dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:inputType="textEmailAddress"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />




                    <EditText
                        android:hint="@string/Password"
                        android:layout_width="match_parent"
                        android:id="@+id/et_pass_signup"
                        android:layout_height="40dp"
                        android:layout_marginTop="45dp"
                        android:textColorHint="@color/white"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:inputType="textPassword"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />


                    <EditText
                        android:textColorHint="@color/white"
                        android:hint="@string/retype_password"
                        android:layout_width="match_parent"
                        android:id="@+id/et_retype_pass"
                        android:layout_height="40dp"
                        android:layout_marginTop="45dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:inputType="textPassword"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />




                </LinearLayout>

            </LinearLayout>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/btn_Signup"
                android:layout_below="@+id/linlay1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />



            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />

        </RelativeLayout>
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

    </RelativeLayout>



</RelativeLayout>
